--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,13 +57,14 @@ aside {
 }
 nav {
     grid-area: nav;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
     max-width: 960px;
-    margin: 0 auto;
-    padding: 0px;
 }
+    nav > ul {
+        list-style-type: none;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        /*padding: 0;*/
+    }
 section {
     grid-area: section;
 }
